Gi dataprodukt-annulleringer aiven-tilgang i dev og prod

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -23,6 +23,9 @@ spec:
           application: dataprodukt-iverksettelser
           access: readwrite
         - team: tbd
+          application: dataprodukt-annulleringer
+          access: readwrite
+        - team: tbd
           application: spre-subsumsjon
           access: readwrite
         - team: tbd
