Tilgang til sykepengesoknad-sak-status-metrikk

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -226,3 +226,6 @@ spec:
         - team: tbd
           application: sondre-halvorsen
           access: read
+        - team: flex
+          application: sykepengesoknad-sak-status-metrikk
+          access: read
