Gir tilgang til rapid for dataprodukt-app for arbeidsgiveropplysninger
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>
Co-authored-by: Mikael Bjerga <mikael.bjerga@nav.no>
Co-authored-by: Gustav Berggren <gustav.berggren@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -26,6 +26,9 @@ spec:
           application: dataprodukt-annulleringer
           access: readwrite
         - team: tbd
+          application: dataprodukt-arbeidsgiveropplysninger
+          access: readwrite
+        - team: tbd
           application: spre-subsumsjon
           access: readwrite
         - team: tbd
