skrur toggle på i prod for å høste erfaringer
Co-authored-by: Morten Tholander <morten.tholander@nav.no>
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>

--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -84,3 +84,5 @@ spec:
     value: "100"
   - name: KAFKA_MAX_POLL_INTERVAL_MS
     value: "1500000" # 1,500,000 millisekunder er 25 minutter
+  - name: ANNULLERE_OG_UTBETALE
+    value: "true"
