Gi speaker-backend kafka-tilgang

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -227,6 +227,9 @@ spec:
           application: speaker-kafka
           access: readwrite
         - team: tbd
+          application: speaker-backend
+          access: readwrite
+        - team: tbd
           application: sondre-halvorsen
           access: read
         - team: flex
