--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -205,6 +205,9 @@ spec:
         - team: tbd
           application: speaker-kafka
           access: readwrite
+        - team: tbd
+          application: speaker-backend
+          access: readwrite
         - team: flex
           application: sykepengesoknad-sak-status-metrikk
           access: read
