kjører snyk, men ikke krev at den funker
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -49,6 +49,7 @@ jobs:
   snyk:
     name: check vulnerabilities
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v3
       - name: Gradle vulnerability check
@@ -61,7 +62,7 @@ jobs:
 
   deployDev:
     name: deploy to dev
-    needs: [set_version, build, snyk]
+    needs: [set_version, build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -74,7 +75,7 @@ jobs:
 
   deployProd:
     name: deploy to prod
-    needs: [ set_version, build, snyk ]
+    needs: [ set_version, build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
