--- a/.github/workflows/spleis-opprydding-dev.yml
+++ b/.github/workflows/spleis-opprydding-dev.yml
@@ -56,7 +56,7 @@ jobs:
 
   deployDev:
     name: deploy to dev
-    needs: [set_version, build, snyk]
+    needs: [set_version, build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
