--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -49,7 +49,6 @@ jobs:
   snyk:
     name: check vulnerabilities
     runs-on: ubuntu-latest
-    continue-on-error: true
     steps:
       - uses: actions/checkout@v3
       - name: Gradle vulnerability check
@@ -62,7 +61,7 @@ jobs:
 
   deployDev:
     name: deploy to dev
-    needs: [set_version, build]
+    needs: [set_version, build, snyk]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -75,7 +74,7 @@ jobs:
 
   deployProd:
     name: deploy to prod
-    needs: [ set_version, build]
+    needs: [ set_version, build, snyk ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
