det er spleis-api som må ha toggle 💀

--- a/deploy/dev-api.yml
+++ b/deploy/dev-api.yml
@@ -71,3 +71,5 @@ spec:
     value: "helse-spleis"
   - name: DATABASE_DATABASE
     value: "spleis"
+  - name: FLERE_HVITE_POLSER
+    value: "true"
