Legger til at Spout kan produsere meldinger på rapiden 🌊
Co-authored-by: Simen Ullern <simen.ullern@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -235,3 +235,6 @@ spec:
         - team: flex
           application: sykepengesoknad-sak-status-metrikk
           access: read
+        - team: tbd
+          application: spout
+          access: write
