Spout trenger tilgang i prod og 🚀

--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -211,3 +211,7 @@ spec:
         - team: flex
           application: sykepengesoknad-sak-status-metrikk
           access: read
+        - team: tbd
+          application: spout
+          access: write
+
