--- a/.github/workflows/spleis-api.yml
+++ b/.github/workflows/spleis-api.yml
@@ -57,7 +57,7 @@ jobs:
 
   deployDev:
     name: deploy to dev
-    needs: [set_version, build, snyk]
+    needs: [set_version, build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -70,7 +70,7 @@ jobs:
 
   deployProd:
     name: deploy to prod
-    needs: [set_version, build, deployDev, snyk]
+    needs: [set_version, build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
