legger inn accessPolicy på db

--- a/deploy/dev-opprydding.yml
+++ b/deploy/dev-opprydding.yml
@@ -33,6 +33,10 @@ spec:
           apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
           kind: Project
         role: roles/cloudsql.client
+  accessPolicy:
+    outbound:
+      external:
+        - host: "35.228.176.0/32"
   prometheus:
     enabled: true
     path: /metrics
