--- a/deploy/dev-api.yml
+++ b/deploy/dev-api.yml
@@ -61,6 +61,9 @@ spec:
         - application: sporing
           namespace: tbd
           cluster: dev-gcp
+    outbound:
+      external:
+        - host: "35.228.176.0/32"
   secureLogs:
     enabled: true
   envFrom:
