--- a/deploy/dev-gc-job.yml
+++ b/deploy/dev-gc-job.yml
@@ -21,6 +21,10 @@ spec:
           kind: Project
           name: tbd-dev-7ff9
         role: roles/cloudsql.client
+  accessPolicy:
+    outbound:
+      external:
+        - host: "35.228.176.0/32"
   env:
     - name: DATABASE_REGION
       value: "europe-north1"
