gir nettverkstilgang til spleis-databasen
se https://nav-it.slack.com/archives/C5KUST8N6/p1680085706741319

--- a/deploy/dev-api.yml
+++ b/deploy/dev-api.yml
@@ -5,6 +5,7 @@ metadata:
   namespace: tbd
   labels:
     team: tbd
+    db: spleis # trengs bare ifm. 'spleis-db-policy'
 spec:
   image: {{image}}
   port: 8080
