Legger til at spoiler kan lese og skrive til rapid 📣
Co-authored-by: Hege Haavaldsen <hege.haavaldsen@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -238,3 +238,6 @@ spec:
         - team: tbd
           application: spout
           access: write
+        - team: tbd
+          application: spoiler
+          access: readwrite
