gir tilgang til spenn-avstemming-cronjob

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -116,6 +116,9 @@ spec:
           application: spenn-avstemming
           access: readwrite
         - team: tbd
+          application: spenn-avstemming-cronjob
+          access: readwrite
+        - team: tbd
           application: spenn-opprydding-dev
           access: readwrite
         - team: tbd
