--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -116,6 +116,9 @@ spec:
           application: spenn-avstemming
           access: readwrite
         - team: tbd
+          application: spenn-avstemming-cronjob
+          access: readwrite
+        - team: tbd
           application: spesialist
           access: readwrite
         - team: tbd
