Gi spoogle tilgang til rapid

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -250,3 +250,6 @@ spec:
         - team: tbd
           application: spoiler
           access: readwrite
+        - team: tbd
+          application: spoogle
+          access: readwrite
