--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -226,4 +226,7 @@ spec:
         - team: tbd
           application: spoiler
           access: readwrite
+        - team: tbd
+          application: spoogle
+          access: readwrite
 
