--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -27,8 +27,15 @@ jobs:
         with:
           languages: ${{ matrix.language }}
 
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v2
+      - name: Setup Java 
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17.x'
+          cache: 'gradle'
+
+      - name: Build
+        run: ./gradlew clean build -x test
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
