:bricks: Styringsinfo må få lov til å lese rapiden.
Co-authored-by: Øyvind Hagen <oyvind.hagen@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -241,6 +241,9 @@ spec:
         - team: tbd
           application: sondre-halvorsen
           access: read
+        - team: tbd
+          application: spre-styringsinfo
+          access: read
         - team: flex
           application: sykepengesoknad-sak-status-metrikk
           access: read
