:bricks: Styringsinfo må få lov til å skrive rapiden!?
Jeg lover at den ikke skal skrive til rapiden, altså.

Co-authored-by: Øyvind Hagen <oyvind.hagen@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -243,7 +243,7 @@ spec:
           access: read
         - team: tbd
           application: spre-styringsinfo
-          access: read
+          access: readwrite
         - team: flex
           application: sykepengesoknad-sak-status-metrikk
           access: read
