:bricks: Styringsinfo leser rapiden også i prod.
Jeg lover at den ikke skal skrive til rapiden, altså.

Co-authored-by: Øyvind Hagen <oyvind.hagen@nav.no>

--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -217,6 +217,9 @@ spec:
         - team: tbd
           application: speaker-backend
           access: readwrite
+        - team: tbd
+          application: spre-styringsinfo
+          access: readwrite
         - team: flex
           application: sykepengesoknad-sak-status-metrikk
           access: read
