Gi spoogle-opprydding-dev tilgang til rapid

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -256,3 +256,5 @@ spec:
         - team: tbd
           application: spoogle
           access: readwrite
+        - application: spoogle-opprydding-dev
+          access: readwrite
