🐛 Må ha med team

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -256,5 +256,6 @@ spec:
         - team: tbd
           application: spoogle
           access: readwrite
-        - application: spoogle-opprydding-dev
+        - team: tbd
+          application: spoogle-opprydding-dev
           access: readwrite
