gir tilgang til sigrun

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -74,6 +74,9 @@ spec:
           application: sparkel-inntekt
           access: readwrite
         - team: tbd
+          application: sparkel-sigrun
+          access: readwrite
+        - team: tbd
           application: sparkel-institusjonsopphold
           access: readwrite
         - team: tbd
