Revert "fjerner kode knyttet til å revurdere flere samtidig 👋"
This reverts commit 255b2cf2d7be3199af8fdeebd83e2555610623bb.

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -54,5 +54,9 @@ spec:
     value: earliest
   - name: IDENTBYTTE
     value: "true"
+  - name: FORENKLE_REVURDERING
+    value: "true"
   - name: AVVIKSAKER
+    value: "true"
+  - name: UTKAST_TIL_VEDTAK
     value: "true"
