Legger ikke på varsel ved tom AGP på IM fra nav.no
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,6 +16,9 @@ on:
     branches:
       - master
 
+env:
+  ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   set_version:
     name: set image name
