Tar en råsjans på write permissions for build-steget 👨‍🔧
Co-authored-by: David Steinsland <david@davidsteinsland.net>
Co-authored-by: Simen Ullern <simen.ullern@nav.no>
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -30,6 +30,8 @@ jobs:
     name: build docker image
     runs-on: ubuntu-latest-16-cores
     needs: set_version
+    permissions:
+      packages: write
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
