--- a/.github/workflows/spleis-api.yml
+++ b/.github/workflows/spleis-api.yml
@@ -27,6 +27,8 @@ jobs:
     name: build docker image
     runs-on: ubuntu-latest
     needs: set_version
+    permissions:
+      packages: write
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
