Oppdaterer alle workflows til å ha variabel for githubPassword
Co-authored-by: Hege Haavaldsen <hege.haavaldsen@nav.no>

--- a/.github/workflows/spleis-opprydding-dev.yml
+++ b/.github/workflows/spleis-opprydding-dev.yml
@@ -11,6 +11,9 @@ on:
       - '.github/workflows/spleis-opprydding-dev.yml'
       - 'deploy/dev-opprydding.yml'
 
+env:
+  ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   set_version:
     name: set image name
