--- a/.github/workflows/spleis-api.yml
+++ b/.github/workflows/spleis-api.yml
@@ -13,6 +13,9 @@ on:
     - 'deploy/dev-api.yml'
     - 'deploy/prod-api.yml'
 
+env:
+  ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   set_version:
     name: set image name
