--- a/.github/workflows/spleis-api.yml
+++ b/.github/workflows/spleis-api.yml
@@ -60,15 +60,15 @@ jobs:
           RESOURCE: deploy/dev-api.yml
           IMAGE: ${{ needs.set_version.outputs.image }}
 
-  deployProd:
-    name: deploy to prod
-    needs: [set_version, build]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-gcp
-          RESOURCE: deploy/prod-api.yml
-          IMAGE: ${{ needs.set_version.outputs.image }}
+#  deployProd:
+#    name: deploy to prod
+#    needs: [set_version, build]
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: nais/deploy/actions/deploy@v1
+#        env:
+#          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+#          CLUSTER: prod-gcp
+#          RESOURCE: deploy/prod-api.yml
+#          IMAGE: ${{ needs.set_version.outputs.image }}
