:wrench: Gi sparkel-dokumenter tilgang til rapid
Co-authored-by: Jonas Hasle <jonas.hasle@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -262,3 +262,6 @@ spec:
         - team: tbd
           application: spoogle-opprydding-dev
           access: readwrite
+        - team: tbd
+          application: sparkel-dokumenter
+          access: readwrite
