--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -232,4 +232,7 @@ spec:
         - team: tbd
           application: spoogle
           access: readwrite
+        - team: tbd
+          application: sparkel-dokumenter
+          access: readwrite
 
