Gir tilgang til rapiden til spedisjon-opprydding-de
Co-authored-by: David Steinsland <david.steinsland@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -265,3 +265,6 @@ spec:
         - team: tbd
           application: sparkel-dokumenter
           access: readwrite
+        - team: tbd
+          application: spedisjon-opprydding-dev
+          access: readwrite
