--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -84,4 +84,4 @@ spec:
   - name: KAFKA_MAX_POLL_INTERVAL_MS
     value: "1500000" # 1,500,000 millisekunder er 25 minutter
   - name: SEND_FERIEPENGEOPPDRAG
-    value: "false"
+    value: "true"
