gi Spekulant tilgang til kafka i dev og prod
Co-authored-by: Christian Bülow Skovborg <christian.bulow.skovborg@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -134,6 +134,9 @@ spec:
           application: spesialist-migrering
           access: readwrite
         - team: tbd
+          application: spekulant
+          access: readwrite
+        - team: tbd
           application: spotter
           access: readwrite
         - team: tbd
