--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -128,6 +128,9 @@ spec:
           application: spesialist-migrering
           access: readwrite
         - team: tbd
+          application: spekulant
+          access: readwrite
+        - team: tbd
           application: spotter
           access: readwrite
         - team: tbd
