Rename Spekulant -> Spinnvill
Co-authored-by: Øydis Kind Refsum <oydis.kind.refsum@nav.no>
Co-authored-by: Trine Linderud <trine.linderud@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -134,7 +134,7 @@ spec:
           application: spesialist-migrering
           access: readwrite
         - team: tbd
-          application: spekulant
+          application: spinnvill
           access: readwrite
         - team: tbd
           application: spotter
