--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -128,7 +128,7 @@ spec:
           application: spesialist-migrering
           access: readwrite
         - team: tbd
-          application: spekulant
+          application: spinnvill
           access: readwrite
         - team: tbd
           application: spotter
