Avstem kl. 1 på natta Oslo-tid for mindre tidssone-krøll
Ble krøll på søndag ifbm. justering av klokka

--- a/deploy/prod-avstemming-job.yml
+++ b/deploy/prod-avstemming-job.yml
@@ -8,7 +8,8 @@ metadata:
   namespace: tbd
 spec:
   image: {{image}}
-  schedule: "0 2 * * *"
+  schedule: "0 1 * * *"
+  timeZone: Europe/Oslo
   kafka:
     pool: nav-prod
   secureLogs:
