forbereder konfigurasjon for ny instans
med ny instans får vi blant annet mulighet for å "resette" disk-størrelsen: nåværende diskstørrelse er 7 TiB, men spleis trenger bare rundt 800 GiB. Dette koster mye penger.

Dessuten får vi oppgradert til postgres 15 i samme slengen, og er litt bedre instansnavn: spleis (fremfor helse-spleis som det gamle het)

--- a/deploy/prod-avstemming-job.yml
+++ b/deploy/prod-avstemming-job.yml
@@ -27,6 +27,6 @@ spec:
     - name: DATABASE_REGION
       value: "europe-north1"
     - name: DATABASE_INSTANCE
-      value: "helse-spleis"
+      value: "spleis"
     - name: RUNTIME_OPTS
       value: "avstemming"
