må skru av autoscaling for appen når vi har custom hpa

--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -16,6 +16,8 @@ spec:
   readiness:
     path: isready
     initialDelay: 5
+  replicas:
+    disableAutoScaling: true
   resources:
     limits:
       memory: 8Gi
