--- a/deploy/prod-avstemming-job.yml
+++ b/deploy/prod-avstemming-job.yml
@@ -27,6 +27,6 @@ spec:
     - name: DATABASE_REGION
       value: "europe-north1"
     - name: DATABASE_INSTANCE
-      value: "spleis"
+      value: "spleis2"
     - name: RUNTIME_OPTS
       value: "avstemming"
