Toggle for flytting av vurdering av avvik
Co-authored-by: David Steinsland <david@steinsland.email>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -53,7 +53,5 @@ spec:
     value: earliest
   - name: IDENTBYTTE
     value: "true"
-  - name: AVVIKSAKER
-    value: "true"
-  - name: AIG
+  - name: AVVIKSAKER_FLYTTET
     value: "true"
