dev-api yml må også ha nyss om toggle
Co-authored-by: David Steinsland <david@steinsland.email>

--- a/deploy/dev-api.yml
+++ b/deploy/dev-api.yml
@@ -72,4 +72,6 @@ spec:
     value: "helse-spleis"
   - name: DATABASE_DATABASE
     value: "spleis"
+  - name: AVVIKSAKER_FLYTTET
+    value: "true"
 
