må ha tilgang til å kontakte spurtedu
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>

--- a/deploy/dev-api.yml
+++ b/deploy/dev-api.yml
@@ -61,6 +61,9 @@ spec:
         - application: sporing
           namespace: tbd
           cluster: dev-gcp
+    outbound:
+      rules:
+        - application: spurtedu
   secureLogs:
     enabled: true
   envFrom:
