--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -42,6 +42,7 @@ spec:
               - name: spleis-api
               - name: spleis-opprydding-dev
               - name: spleis-avstemming
+              - name: spleis-migrate
   secureLogs:
     enabled: true
   env:
