Prøver med tbd-prefix på topic, og lesetilgang for den rette applikasjonen
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>
Co-authored-by: Christian Bülow Skovborg <christian.bulow.skovborg@nav.no>
Co-authored-by: Eirik Gallefoss <eirik.gallefoss@nav.no>

--- a/deploy/topic-avviksvurdering-migreringer-dev.yml
+++ b/deploy/topic-avviksvurdering-migreringer-dev.yml
@@ -17,7 +17,7 @@ spec:
     retentionHours: 168  # -1 means unlimited
   acl:
     - team: tbd
-      application: helse-spleis
+      application: spleis-migrate
       access: readwrite
     - team: tbd
       application: spinnvill
