--- a/.github/workflows/topics.yml
+++ b/.github/workflows/topics.yml
@@ -6,6 +6,7 @@ on:
     - master
     paths:
     - 'deploy/topic-avviksvurdering-migreringer-dev.yml'
+    - 'deploy/topic-avviksvurdering-migreringer-prod.yml'
 
 jobs:
   deployDev:
@@ -18,3 +19,14 @@ jobs:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
           RESOURCE: deploy/topic-avviksvurdering-migreringer-dev.yml
+
+  deployProd:
+    name: apply prod-gcp
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-gcp
+          RESOURCE: deploy/topic-avviksvurdering-migreringer-prod.yml
