--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -64,3 +64,5 @@ spec:
     value: "1500000" # 1,500,000 millisekunder er 25 minutter
   - name: SEND_FERIEPENGEOPPDRAG
     value: "false"
+  - name: AVVIKSAKER_FLYTTET
+    value: "true"
