--- a/.github/workflows/spleis-jobs.yml
+++ b/.github/workflows/spleis-jobs.yml
@@ -37,7 +37,8 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '17.x'
+          java-version: '21.x'
+          cache: 'gradle'
       - name: test and build
         run: ./gradlew :jobs:test :jobs:build
       - name: build docker image
