bytter til google artifact registry 🎉
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>

--- a/.github/workflows/spleis-opprydding-dev.yml
+++ b/.github/workflows/spleis-opprydding-dev.yml
@@ -22,7 +22,7 @@ jobs:
       - name: create docker tag
         run: echo "TAG=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
     outputs:
-      image: ghcr.io/${{ github.repository }}/spleis-opprydding-dev:${{ env.TAG }}
+      tag: ${{ env.TAG }}
 
   build:
     name: build docker image
@@ -40,15 +40,21 @@ jobs:
       - name: test and build
         run: ./gradlew :sykepenger-opprydding-dev:test :sykepenger-opprydding-dev:build
       - name: build docker image
-        run: docker build -f Dockerfile sykepenger-opprydding-dev --pull -t ${{ needs.set_version.outputs.image }}
-      - name: push docker image
-        run: |
-          docker login ghcr.io --username "$GITHUB_REPOSITORY" -p ${{ secrets.GITHUB_TOKEN }}
-          docker push ${{ needs.set_version.outputs.image }}
+        uses: nais/docker-build-push@v0
+        id: docker-build-push
+        with:
+          team: tbd
+          image_suffix: sykepenger-opprydding-dev
+          tag: ${{ needs.set_version.outputs.tag }}
+          docker_context: sykepenger-opprydding-dev
+          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
+          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+    outputs:
+      image: ${{ steps.docker-build-push.outputs.image }}
 
   deployDev:
     name: deploy to dev
-    needs: [set_version, build]
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -57,4 +63,4 @@ jobs:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
           RESOURCE: deploy/dev-opprydding.yml
-          IMAGE: ${{ needs.set_version.outputs.image }}
+          IMAGE: ${{ needs.build.outputs.image }}
