--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest-16-cores
     needs: set_version
     permissions:
-      packages: write
+      id-token: write
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
