--- a/.github/workflows/spleis-jobs.yml
+++ b/.github/workflows/spleis-jobs.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: set_version
     permissions:
-      packages: write
+      id-token: write
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
