--- a/.github/workflows/spleis-opprydding-dev.yml
+++ b/.github/workflows/spleis-opprydding-dev.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: set_version
     permissions:
-      packages: write
+      id-token: write
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
