forsøker å unngå å bygge api, build og opprydding
etter version-bump i 27131fc17208f7b56f178f52136a17e0e36b7516 så feiler spleis-bygget med:

Execution failed for task ':sykepenger-api:remove_spleis_api_db_container'.
> Status 409: {"message":"removal of container spleis-api is already in progress"}

Forsøker å gå rundt det ved å unngå å bygge API-modulen mens spleis-hovedbygget kjører, siden api-modulen har sin egen workflow

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -33,7 +33,7 @@ jobs:
           java-version: '21.x'
           cache: 'gradle'
       - name: test and build
-        run: ./gradlew clean test build
+        run: ./gradlew build -x :jobs:build -x :sykepenger-api:build -x :sykepenger-opprydding-dev:build
       - name: build docker image
         uses: nais/docker-build-push@v0
         id: docker-build-push
