Gi sparkel-tilbakedatert tilgang til rapid
Co-authored-by: Trine Linderud <trine.linderud@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -265,3 +265,6 @@ spec:
         - team: tbd
           application: spedisjon-opprydding-dev
           access: readwrite
+        - team: tbd
+          application: sparkel-tilbakedatert
+          access: readwrite
