--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -226,4 +226,6 @@ spec:
         - team: tbd
           application: sparkel-dokumenter
           access: readwrite
-
+        - team: tbd
+          application: sparkel-tilbakedatert
+          access: readwrite
