tilgang til spekemat

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -268,3 +268,6 @@ spec:
         - team: tbd
           application: sparkel-tilbakedatert
           access: readwrite
+        - team: tbd
+          application: spekemat
+          access: readwrite
