desperat forsøk på å unngå korrupte images
noen ganger, uten at vi har klart å finne ut hvorfor, blir sykepenger-model.jar korrupt på en måte at den ikke er fullverdig. Det virker som en halvferdig zip-fil.

Unzip vil derfor feile i slike tilfeller.

Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>

--- a/.github/workflows/spleis-api.yml
+++ b/.github/workflows/spleis-api.yml
@@ -31,6 +31,8 @@ jobs:
           cache: 'gradle'
       - name: test and build
         run: ./gradlew :sykepenger-api:test :sykepenger-api:build
+      - name: verifiser gyldig modell-jar
+        run: unzip sykepenger-api/build/libs/sykepenger-model.jar -d /tmp/sykepenger-model
       - name: build docker image
         uses: nais/docker-build-push@v0
         id: docker-build-push
