--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,6 +34,8 @@ jobs:
           cache: 'gradle'
       - name: test and build
         run: ./gradlew build -x :jobs:build -x :sykepenger-api:build -x :sykepenger-opprydding-dev:build
+      - name: verifiser gyldig modell-jar
+        run: unzip sykepenger-mediators/build/libs/sykepenger-model.jar -d /tmp/sykepenger-model
       - name: build docker image
         uses: nais/docker-build-push@v0
         id: docker-build-push
