--- a/.github/workflows/spleis-jobs.yml
+++ b/.github/workflows/spleis-jobs.yml
@@ -31,6 +31,8 @@ jobs:
           cache: 'gradle'
       - name: test and build
         run: ./gradlew :jobs:test :jobs:build
+      - name: verifiser gyldig modell-jar
+        run: unzip jobs/build/libs/sykepenger-model.jar -d /tmp/sykepenger-model
       - name: build docker image
         uses: nais/docker-build-push@v0
         id: docker-build-push
