Revert "fjerner preStopHook"
This reverts commit b46c98d70b1130e13df6beaee3f831085e139bdd.

--- a/deploy/dev-api.yml
+++ b/deploy/dev-api.yml
@@ -17,6 +17,7 @@ spec:
   readiness:
     path: /isready
     initialDelay: 5
+  preStopHookPath: /stop
   resources:
     limits:
       memory: 512Mi
