setter opp prestophook
rapids-and-rivers har en smule mer graceful shutdown med prestophook

--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -16,6 +16,9 @@ spec:
   readiness:
     path: isready
     initialDelay: 5
+  preStopHook:
+    http:
+      path: /stop
   replicas:
     disableAutoScaling: true
   resources:
