--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -27,11 +27,12 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21.x'
-          cache: 'gradle'
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
       - name: test and build
         run: ./gradlew build -x :jobs:build -x :sykepenger-api:build -x :sykepenger-opprydding-dev:build
       - name: verifiser gyldig modell-jar
