--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -7,11 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
+    - uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: '21.x'
-        cache: 'gradle'
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
     - name: test and build
       run: ./gradlew test build
     - name: build docker image
