tilganger for spekemat

--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -229,3 +229,6 @@ spec:
         - team: tbd
           application: sparkel-tilbakedatert
           access: readwrite
+        - team: tbd
+          application: spekemat-slakter
+          access: readwrite
