--- a/deploy/dev-api.yml
+++ b/deploy/dev-api.yml
@@ -59,6 +59,7 @@ spec:
     outbound:
       rules:
         - application: spurtedu
+        - application: spekemat
   secureLogs:
     enabled: true
   envFrom:
