kontakter spekemat - fallback til spleis
spekemat vil kun brukes til visning dersom spleis får kontakt og innholdet er ikke-tomt.

--- a/deploy/dev-api.yml
+++ b/deploy/dev-api.yml
@@ -71,4 +71,6 @@ spec:
     value: "helse-spleis"
   - name: DATABASE_DATABASE
     value: "spleis"
+  - name: SPEKEMAT_SCOPE
+    value: "api://dev-gcp.tbd.spekemat/.default"
 
