bytter over til spekemat – med miljøtoggle for kjapp revert
i tillegg mulig å overstyre via querystring "spekematEnabled"

--- a/deploy/prod-api.yml
+++ b/deploy/prod-api.yml
@@ -72,4 +72,6 @@ spec:
     value: "false"
   - name: SPEKEMAT_SCOPE
     value: "api://prod-gcp.tbd.spekemat/.default"
+  - name: SPEKEMAT_ENABLED
+    value: "true"
 
