tilgang til spill-av-im

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -271,3 +271,6 @@ spec:
         - team: tbd
           application: spekemat-slakter
           access: readwrite
+        - team: tbd
+          application: spill-av-im
+          access: readwrite
